<resources>
    <string name="app_name">ListaToDo</string>
    <string name="what_needs_to_be_done">What needs to be done?</string>
    <string name="dodaj">dodaj</string>
    <string name="here_will_be_the_name_of_the_task">Here will be the name of the task</string>
    <string name="todotask">ToDoTask</string>
    <string name="datestart">dateStart</string>
    <string name="dateend">dateEnd</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_task">create task</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="taskStatus">Task status</string>
    <string name="haveAttachment">Attachment url</string>
    <string name="dateFormat">yyyy-MM-dd HH:mm:ss</string>
    <string name="notification">Notification:</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="modify_task">Modify Task</string>
    <string name="podaj_nazw_taska">Podaj nazwę taska</string>
    <string name="attachment_on_off">Attachment on/off</string>
</resources>