<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoreDetailsAboutTask">

    <TextView
        android:id="@+id/textViewTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/what_needs_to_be_done"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskTitle" />

    <TextView
        android:id="@+id/textViewDateStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/datestart"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskDescription" />

    <TextView
        android:id="@+id/textViewDateEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dateend"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateStart" />
    <TextView
        android:id="@+id/textViewTaskCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateEnd" />
    <TextView
        android:id="@+id/textViewTaskStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/taskStatus"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskCategory" />
    <TextView
        android:id="@+id/textViewHaveAttachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/haveAttachment"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskStatus" />

</androidx.constraintlayout.widget.ConstraintLayout>