<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createTask.CreateTask">

    <EditText
        android:id="@+id/editTextTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/what_needs_to_be_done"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskTitle" />

    <TableRow
        android:id="@+id/dateRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskDescription">

        <EditText
            android:id="@+id/editTextDateStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dateFormat"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTaskDescription" />

        <EditText
            android:id="@+id/editTextDateEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dateFormat"
            android:textAlignment="viewStart"
            android:layout_weight="1"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDateStart" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateRow">

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/CategoryValue"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_weight="1"
            app:layout_constraintStart_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/notification"
            />

        <Spinner
            android:id="@+id/spinnerNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/ONOF"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_weight="1"
            app:layout_constraintStart_toEndOf="parent" />
    </TableRow>

    <EditText
        android:id="@+id/editTextHaveAttachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/haveAttachment"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/createNewTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/createNewTask"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/create_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>